--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Module 11</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    
-    <form action="/search" method="get">
-      <!-- Поле для введення тексту пошуку -->
-      <label for="search">Пошук:</label>
-      <input type="text" id="search" name="q" placeholder="Введіть запит..." required>
+    <form class="form">
+      <input type="text" name="search" placeholder="Search image" required />
+      <button type="submit">Search</button>
+    </form>
 
-      <!-- Кнопка відправки форми -->
-      <button type="submit">Знайти</button>
-  </form>
+    <span class="loader"></span>
+
+    <ul class="gallery"></ul>
 
     <script type="module" src="./main.js"></script>
   </body>
