--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,6 @@
 
     <ul class="gallery"></ul>
 
-    <script type="module" src="./main1.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
